// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomButton applies the correct background color 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  color="#0f265c"
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "borderRadius": 10,
        "marginVertical": 5,
        "paddingVertical": 12,
        "width": 625,
      },
      {
        "backgroundColor": "#0f265c",
      },
    ]
  }
  title="Press me"
>
  <Text
    style={
      {
        "color": "#0f265c",
        "fontSize": 16,
        "fontWeight": "600",
        "paddingVertical": 6,
        "textAlign": "center",
      }
    }
  >
    Press me
  </Text>
</View>
`;

exports[`CustomButton renders correctly when loading 1`] = `
<ActivityIndicator
  color="#0f265c"
  size="small"
/>
`;

exports[`CustomButton renders correctly when not loading 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "borderRadius": 10,
        "marginVertical": 5,
        "paddingVertical": 12,
        "width": 625,
      },
      {
        "backgroundColor": "#ffdd00",
      },
    ]
  }
  title="Press me"
>
  <Text
    style={
      {
        "color": "#0f265c",
        "fontSize": 16,
        "fontWeight": "600",
        "paddingVertical": 6,
        "textAlign": "center",
      }
    }
  >
    Press me
  </Text>
</View>
`;
